# xLua

./: .gitattributes  .gitignore  .gitmodules  README.md  README_EN.md  xluail2cpp可行性分析.md
Assets/: Main.unity  Particle System.prefab  PerfMain.cs
Assets/CRIMW/CriWare/Editor/: CriProfiler.cs  CriProfilerConfig.cs  CriWareInitializerEditor.cs  CriWareVersionWindow.cs
Assets/Editor/: XLuaCfg.cs
Assets/Examples/: ExampleGenConfig.cs
Assets/Examples/01_Helloworld/: Helloworld.cs  Helloworld.unity  HelloworldSettings.lighting
Assets/Examples/02_U3DScripting/: LuaBehaviour.cs  U3DScripting.unity  U3DScriptingSettings.lighting
Assets/Examples/03_UIEvent/: UI.unity  UISettings.lighting
Assets/Examples/04_LuaObjectOrented/: InvokeLua.cs  InvokeLua.unity  InvokeLuaSettings.lighting
Assets/Examples/05_NoGc/: NoGc.cs  NoGc.unity  NoGcSettings.lighting
Assets/Examples/06_Coroutine/: Coroutine.unity  CoroutineSettings.lighting  CoroutineTest.cs
Assets/Examples/06_Coroutine/Coroutine/: LightingData.asset
Assets/Examples/07_AsyncTest/: AsyncTest.cs  AsyncTest.unity  AsyncTestSettings.lighting
Assets/Examples/08_Hotfix/: HotfixTest.cs  HotfixTest.unity  HotfixTest2.cs  HotfixTest2.unity  HotfixTest2Settings.lighting  HotfixTestSettings.lighting
Assets/Examples/08_Hotfix/HotfixTest2/: LightingData.asset
Assets/Examples/09_GenericMethod/: GenericMethod.unity  GenericMethodExample.cs  GenericMethodSettings.lighting
Assets/Examples/10_SignatureLoader/: SignatureLoaderTest.cs  SignatureLoaderTest.unity  SignatureLoaderTestSettings.lighting
Assets/Examples/11_RawObject/: RawObject.unity  RawObjectSettings.lighting  RawObjectTest.cs
Assets/Examples/12_ReImplementInLua/: ReImplementInLua.cs  ReImplementInLua.unity  ReImplementInLuaSettings.lighting
Assets/Examples/14_HotfixAsyncAwait/: HotfixAsyncAwaitTest.cs
Assets/Resources/: non_tlv_net_msg_type.xml  non_tlv_net_protocol.xml  non_tlv_net_protocol_v4.xml
Assets/StreamingAssets/: TypePreLoad.lua  TypePreload.lua  init_il2cpp.lua  luaTest.lua
Assets/StreamingAssets/LuaScripts/: TypePreload.lua  luaTest.lua
Assets/StreamingAssets/LuaScripts/vm/: init.lua  init_il2cpp.lua  init_xlua.lua  polyfill.lua
Assets/StreamingAssets/xlua/: csharp.lua  init_il2cpp.lua
Assets/Test/PrefTest/xLuaPerfTest/: Main.unity  MainSettings.lighting  PerfMain.cs
Assets/Test/UnitTest/xLuaTest/: LuaTestCommon.cs  LuaTestObj.cs  LuaTestObjReflect.cs  main.unity  mainSettings.lighting
Assets/Tutorial/CSharpCallLua/: CSCallLua.cs  CSCallLua.unity  CSCallLuaSettings.lighting
Assets/Tutorial/LoadLuaScript/ByFile/: ByFile.cs  ByFile.unity  ByFileSettings.lighting
Assets/Tutorial/LoadLuaScript/ByString/: ByString.cs  ByString.unity  ByStringSettings.lighting
Assets/Tutorial/LoadLuaScript/Loader/: CustomLoader.cs  CustomLoader.unity  CustomLoaderSettings.lighting
Assets/Tutorial/LuaCallCSharp/: LuaCallCs.cs  LuaCallCs.unity  LuaCallCsSettings.lighting
Assets/XLua/: link.xml
Assets/xLuaPerfTest/: PerfMain.cs
Assets/xLuaPerfTest/Main/: LightingData.asset
DevAssets/: CSTypeUsedInLua.json  CSTypeUsedInLua.txt
Lua/: LuaModule.cpp  LuaModule.h  LuaModule.jam.cs  LuaModuleRegistration.cpp
Lua/Public/: Lua_Bindings.cpp  Lua_Bindings.h  PesapiEngineImpl.cpp  pesapi.h
Lua/ScriptBindings/: Lua.bindings.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt
XLua/Content/JavaScript/puerts/: uelazyload.js  websocketpp.js
XLua/Source/DeclarationGenerator/: DeclarationGenerator.Build.cs
XLua/Source/LuaEnv/Private/: CppObjectMapper.cpp  PesapiAddonLoad.cpp  PesapiV8Impl.cpp  WebSocketImpl.cpp
cli/: FunctionBridge.Gen.h  UnityExports4XLua.h  backend.lua  make.lua  test.lua  unityenv_for_xlua.h
com.tencent.xlua/: README.md  package.json
com.tencent.xlua/Editor/: com.tencent.xlua.core.Editor.asmdef
com.tencent.xlua/Editor/Src/: Configure.cs  ExampleConfig.cs  Generator.cs  LuaImporter.cs
com.tencent.xlua/Plugins/xlua_il2cpp/: LuaIl2CppBridge.cpp  LuaIl2CppFieldWrapper.cpp  LuaIl2CppWrapper.cpp  LuaIl2CppWrapperDef.cpp  Puerts_il2cpp.cpp  TDataTrans.h  UnityExports4XLua.h  XLuaIl2CppFieldWrapper.cpp  XLuaIl2CppWrapper.cpp  XLuaIl2cppBridge.cpp  XLuaIl2cppWrapperDef0.cpp  XLuaIl2cppWrapperDef1.cpp  XLuaIl2cppWrapperDef2.cpp  XLuaValueType.h  XLua_il2cpp.cpp  pesapi.h  pesapi_adpt.c  pesapi_adpt.cpp  unityenv_for_xlua.h
com.tencent.xlua/Runtime/: com.tencent.xlua.Runtime.asmdef
com.tencent.xlua/Runtime/Src/: ArrayBuffer.cs  ArrayExtension.cs  CodeEmit.cs  CopyByValue.cs  DelegateBridge.cs  ExtensionMethodInfos_Gen_Internal.cs  GenericDelegateBridge.cs  ILuaGCInterface.cs  InternalGlobals.cs  LuaBase.cs  LuaDLL.cs  LuaEnv.cs  LuaEnvBase.cs  LuaEvalAttribute.cs  LuaFunction.cs  LuaTable.cs  MethodWarpsCache.cs  ObjectCasters.cs  ObjectTranslator.cs  ObjectTranslatorPool.cs  RegisterInfoManager.cs  StaticLuaCallbacks.cs  TDataTrans.cs  TypeExtensions.cs  TypedValue.cs  Utils.cs
docs/: 虚拟机.md
native_src/: CMakeLists.txt  make_win64_lua54.bat  make_win64_luajit.bat  make_win64_luajit_gc64.bat  make_win_lua54.bat
native_src/Inc/: Common.h  CommonTypes.h  ExecuteModuleJSCode.h  IPuertsPlugin.h  Log.h
native_src_il2cpp/: CMakeLists.txt  XLua.cpp  make_win64_lua54.bat  make_win64_lua54_debug.bat  make_win64_lua54_release.bat
native_src_il2cpp/Inc/: CppObjectMapper.h  DataTransfer.h  Log.h  LuaClassRegister.h  ObjectCacheNode.h  PesapiBackend.hpp  StaticCall.hpp  Typeinfo.hpp  UnityExports4XLua.h  XLua.h  XLuaNamespaceDef.h  pesapi.h  xlua.h
native_src_il2cpp/Src/: CppObjectMapper.cpp  DataTransfer.cpp  LuaClassRegister.cpp  LuaClassRegister.h  PesapiAddonLoad.cpp  PesapiLuaImpl.cpp  XLua.cpp  XLuaIl2CppFieldWrapper.cpp  XLuaIl2CppWrapper.cpp  XLuaIl2cppBridge.cpp  XLuaIl2cppWrapperDef0.cpp  XLuaIl2cppWrapperDef1.cpp  XLuaIl2cppWrapperDef2.cpp  XLuaIl2cppWrapperDef3.cpp  XLuaIl2cppWrapperDef4.cpp  XLuaIl2cppWrapperDef5.cpp  XLuaIl2cppWrapperDef6.cpp  XLuaValueType.h
native_src_il2cpp/sparsehash/: dense_hash_map.h  densehashtable.h  sparse_hash_map.h  sparsehashtable.h  sparsetable.h
(+118 files in other folders)
